# 7fhskj55

./: .gitignore  HuggingFaceDownloadFolder.py  HuggingFaceDownloadModel.py  README.md  __init__.py  backup.py  check_braces.py  check_syntax.js  downloader.py  file_manager.py  model_discovery.py  parse_link.py  pyproject.toml  requirements.txt  web_api.py
.github/workflows/: publish.yaml  publish.yml
js/: auto_download.js  backup.js  download_status_panel.js  model_library.js  settings.js  top_menu.js
