[project]
name = "ComfyUI_HuggingFace_Downloader"
description = "ComfyUI tools to auto-download missing workflow models from Hugging Face and backup or restore ComfyUI data."
version = "0.9-beta"

dependencies = ["huggingface_hub>=0.32.0"]

[project.urls]
Repository = "https://github.com/jnxmx/ComfyUI_HuggingFace_Downloader"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jnx"
DisplayName = "Hugging Face Download & Backup"
Icon = ""
